[project]
name = "agenticbloggeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.1.54",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]
